# archiver

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cli-app.sh  cli-mode.sh  core-build.sh  core-deploy-cli-mode.sh  core-wasm-deploy.sh  docker-compose.yml  package-lock.json  package.json  tsconfig.json
cli/: build.sh  cli-mode-start.sh
cli/utils/: checking-dependencies.sh  log.sh
docker/: Dockerfile  docker-compose.yaml
src/: .app.ts.swp  app.ts  index.ts  main.cpp  server.js
src/config/: .redisClient.ts.swp  multer.config.ts  redisClient.ts  server.config.ts
src/core/: CMakeLists.txt  LICENSE.txt  Makefile  README.md  archiver.c  archiver.h  huffman.c  index.ts
src/core/cli/: cli-mode-start.sh
src/core/cli/utils/: checking-dependencies.sh  log.sh
src/core/engine/: main.cpp
src/core/engine/huffman-core/: huffman.c
src/core/wasm/: README.md  huffman-wasm.js  huffman-wasm.wasm  huffman.module.ts  index.ts  yourfile.wast
src/modules/archive/: archive.controller.ts  archive.service.ts  types.ts
src/routers/: archive.router.ts  index.ts
